# momoi

./: .gitignore  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  KNOWN_ISSUES.md  NIXOS_CONFIGURATION.md  README.md  ROADMAP.md  TRANSITIONS.md  config.toml.example  flake.nix
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
daemon/: Cargo.toml
daemon/src/: buffer.rs  config.rs  gif_converter.rs  gif_manager.rs  ipc_server.rs  macros.rs  main.rs  overlay_shader.rs  playlist.rs  resource_monitor.rs  scheduler.rs  shader_manager.rs  transition.rs  video_manager.rs  wallpaper_manager.rs  wayland_manager.rs
daemon/src/gpu/: context.rs  mod.rs  pipeline_builder.rs  renderer.rs  texture.rs  video_buffer_pool.rs
daemon/src/gpu/shaders/: blend.wgsl  blit.wgsl  gradient.wgsl  matrix.wgsl  overlay.wgsl  plasma.wgsl  raymarching.wgsl  scale.wgsl  starfield.wgsl  tunnel.wgsl  waves.wgsl
daemon/src/video/: frames.rs  manager.rs  mod.rs  pipeline.rs  stats.rs
daemon/src/wayland/: commands.rs  daemon.rs  event_handlers.rs  event_loop.rs  frame_updates.rs  mod.rs  outputs.rs  overlay.rs  reconnection.rs  transitions.rs  types.rs  utils.rs
daemon/src/wayland/commands/: color.rs  image.rs  mod.rs  shader.rs  video.rs
daemon/tests/: ipc_integration.rs
nix/modules/: README.md  config-builder.nix  easy-home-manager.nix  easy-nixos.nix  home-manager.nix  nixos.nix  options.nix
