[workspace]
resolver = "2"
members = ["client", "daemon", "common"]
default-members = ["client", "daemon"]

[workspace.package]
version = "0.1.0"
authors = ["Chiko chiko@envs.net"]
edition = "2024"
license = "MIT"
rust-version = "1.92.0"

[workspace.dependencies]
common = { path = "common" }

# Wayland dependencies
smithay-client-toolkit = "0.20"
wayland-client = "0.31"
wayland-protocols = "0.32"
wayland-protocols-wlr = "0.3"

# Image processing
image = { version = "0.25", default-features = false }
fast_image_resize = "6.0.0"
resvg = "0.46.0"

# Video processing (optional features)
gstreamer = { version = "0.24.4" }
gstreamer-video = { version = "0.24.4" }
gstreamer-app = { version = "0.24.4" }

# Graphics
wgpu = { version = "28.0.0" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# IPC and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Utilities
anyhow = "1.0"
thiserror = "2.0.18"
log = "0.4"
env_logger = "0.11"
rayon = "1.8"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 0
lto = "thin"
opt-level = 3
codegen-units = 16
strip = true
